src/objects/Verticals_Selling__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Super_Category__c</fullName>
        <label>Super Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Seller_ID__c</fullName>
        <label>Vertical Seller ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verticals_Selling_Name__c</fullName>
        <label>Verticals Selling Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Verticals Selling</label>
</CustomObject>